syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mobigen.datafabric.share.interfaces";
option java_outer_classname = "AdapterProto";

import "google/protobuf/empty.proto";
import "storage-common.proto";

// StorageType Management :  지원하는 저장소 종류 관리를 위한 서비스( 제공 대상 : 시스템 관리자 )

// AdaptorService   :  저장소 유형 정보 제공과 어댑터 관리를 위한 서비스( 제공 대상 : 일반 사용자와 관리자 )
service AdaptorService {
  // GET /storage/v1/storage-type
  rpc GetStorageType(google.protobuf.Empty) returns (ResSupportedStorageType) {}
  // GET /storage/v1/adaptors?storageType=xxx
  rpc GetAdaptors(ReqAdaptors) returns (ResAdaptors) {}
}

// SupportedStorageType    : 시스템에서 지원하는 저장소 유형과 저장소 유형 별 설정 정보
message SupportedStorageType {
  string name = 1;                              // 기본 정보(이름, 아이콘, 기타 등등)
  bytes icon = 2;
  repeated InputField connSchema = 3;          // 최소한(필수)으로 필요한 연결 설정 정보 리스트 ( HOST, PORT, DBNAME 등 )
  repeated AuthSchema authSchema = 4;          // 지원하는 인증 리스트
  // SSL
}

// Adaptor 저장소 연결용 JDBC 드라이버
message Adaptor {
  string id = 1;                                  // 아이디
  string name = 2;                                // 이름
  string storageType = 3;                         // 저장소 유형 이름
  string version = 4;                             // 버전
  string path = 5;                                // JDBC 드라이버 경로
  string class = 6;                               // Class 이름
  repeated string supportedURL = 7;               // 연결에 사용되는 URL 리스트
  string selectURL = 8;                           // 사용자가 선택(편집)한 URL
  repeated InputField basicOptions = 9;           // 저장소 유형에 따라 요구되는 필수 정보와 + 어댑터(등록자)가 설정한 요구 설정
//  repeated AuthSchema authOptions = 10;
//  AuthSchema selectAuth = 10;
  repeated InputField additionalOptions = 10;     // 저장소 유형에서 요구하는 입력 정보 + 어댑터에서 요구하는 입력 정보
}

message ResSupportedStorageType{
  string code = 1;
  string errMsg = 2;
  message Data {
    repeated SupportedStorageType supportedStorageType = 1;
  }
  Data data = 3;
}

message ReqAdaptors {
  string storageType = 1;
}

message ResAdaptors {
  string code = 1;
  string errMsg = 2;
  message Data {
    repeated Adaptor adaptors = 1;
  }
  Data data = 3;
}
